# pcb-defect-detector

./: .gitignore  COMMANDES_GIT.txt  CORRECTIONS_SUMMARY.md  DEPLOYMENT.md  FINAL_SUMMARY.md  GUIDE_GITHUB_KAGGLE.md  IMPLEMENTATION_COMPLETE.md  INSTRUCTIONS_ALAINPALUKU.md  KAGGLE_FROM_GITHUB.md  KAGGLE_GUIDE.md  KAGGLE_SETUP.md  LICENSE  Makefile  OPTIMIZATIONS.md  PROBLEM_DEFINITION.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  RESUME_SIMPLE.md  check_dataset.py  config.py  data_manager.py  data_pipeline.py  debug_kaggle.py  evaluator.py  git_push.sh  kaggle_debug.py  kaggle_notebook.ipynb  kaggle_script.py  main.py  model_builder.py  push_to_github.sh  requirements-dev.txt  requirements.txt  run_kaggle.py  setup.py  test_setup.py  train_notebook.ipynb  trainer.py  (+1 more)
desktop-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src/components/: ImageWithBoxes.tsx  Sidebar.tsx
desktop-app/src/config/: model.config.ts
desktop-app/src/constants/: index.ts
desktop-app/src/pages/: AboutPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  index.ts
desktop-app/src/types/: index.ts
docs/: _config.yml  index.html
notebooks/: pcb_defect_detection.ipynb
src/: __init__.py  config.py  data_ingestion.py  detector.py  kaggle_setup.py  main.py  model.py  trainer.py  utils.py  visualization.py
tests/: __init__.py  test_model.py
(+8 files in other folders)
